# django-ecommerce

./: .env  .gitignore  manage.py  pyproject.toml
accounts/: admin.py  views.py
cart/: apps.py  models.py  signals.py  utils.py  views.py
cart/migrations/: 0001_initial.py  0002_cart_total.py  0003_alter_cart_total.py  0004_cartitem_prev_quantity.py
config/gunicorn/: dev.py
item/: admin.py  apps.py  forms.py  models.py  tests.py  utils.py  views.py
item/migrations/: 0001_initial.py  0002_auto_20240828_2147.py  0003_auto_20240831_1052.py  0004_auto_20240831_1129.py  0005_auto_20240831_1153.py  0005_auto_20240901_1216.py  0006_auto_20240831_1155.py  0006_auto_20240901_1630.py  0007_auto_20240831_1213.py  0007_auto_20240901_1704.py  0008_merge_0007_auto_20240831_1213_0007_auto_20240901_1704.py  0009_auto_20240902_1923.py  0010_auto_20240902_1928.py  0011_auto_20240902_1943.py  0012_auto_20240902_2004.py  0013_auto_20240902_2005.py  0014_auto_20240910_2143.py  0015_item_image.py  0016_alter_item_image.py  0017_alter_item_image.py  0018_alter_item_image.py  0019_alter_item_image.py  0020_alter_item_image.py  0021_alter_item_image.py  0022_alter_item_veg_nonveg.py
order/: admin.py  forms.py  models.py  test.py  views.py
order/migrations/: 0001_initial.py  0002_auto_20240901_1827.py  0003_auto_20240901_1829.py  0004_auto_20240902_1802.py  0005_auto_20240902_1805.py  0006_auto_20240902_1923.py  (+7 more)
payment/: utils.py  views.py
restaurant_app/: admin.py  asgi.py  init.sql  models.py  settings.py  test.py  urls.py  views.py  wsgi.py
templates/: base.html
(+19 files in other folders)
