[tool.poetry]
name = "restaurant-app"
version = "0.1.0"
description = "trying django by making restaurant app"
authors = ["Kartik Behl <behlkartik20@gmail.com>"]
readme = "README.md"
packages = [{include = "restaurant_app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<3.3"
django-bootstrap-v5 = "^1.0.11"
django-dotenv = "^1.4.2"
psycopg2-binary = "^2.9.9"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
